@@ -8,4 +8,8 @@ use SPVM::Builder::Config;
 
 my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
 
+my $sys_windows_include_dir = dirname(__FILE__) . "/../Windows.native/include";
+
+$config->add_include_dir($sys_windows_include_dir);
+
 $config;
